# smart-mirror

./: Cargo.toml  README.md
mirror_frontend/: index.html  script.js  styles.css
src/: calendar_api.rs  chat.rs  main.rs  state.rs  text_to_speech.rs  weather_api.rs
