[package]
name = "smart_mirror_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.6", features = ["macros"]}
chrono = "0.4.39"
dotenv = "0.15.0"
google-calendar3 = "4.0.0"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
hyper-rustls = "0.24"
oauth2 = "4.0"

lazy_static = "1.4"
urlencoding = "2.1"
hyper-util = "0.1.10"
tower-http ={version = "0.4", features = ["cors"]}
tower = "0.5.2"
http = "0.2.12"
